--- a/_posts/2000-01-06-tips.md
+++ b/_posts/2000-01-06-tips.md
@@ -1,12 +1,12 @@
 ---
-title: "Tips"
+title: "Workspace"
 bg: purple
 color: white
 fa-icon: terminal
 ---
 
-## Tips for productive developer.
+## My dev setup.
 
-1. Make "Linux" your default Desktop, because the Earth stops spinning if Linux disappears.
-2. Learn Python (if possible C++), rest are irrelavant.
-3. Master Emacs.
+1. Ubuntu LTS desktop, no mac, no windows.
+2. Python, C++
+3. Emacs with prelude.
