--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -8,7 +8,7 @@ style: center
 
 ![My helpful screenshot]({{ site.url }}img/DSCF1301.JPG) 
 
-#About
+#About Kala Bharath Pilla
 
 I am currently Postdoc at Australian National university with Prof.Thomas Huber.
 I finished my PhD in computational structural biology, my PhD thesis titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
