--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -2,9 +2,10 @@
 title: "Research"
 bg: orange
 color: black
-fa-icon: toggle-on
+fa-icon: fa-lightbulb-o
 ---
 
-<div class="icontain">
-  <iframe src="//www.youtube.com/watch?v=MsVHI3s5QB4" allowfullscreen></iframe>
-</div>
+2. Identifying Protein Conformational States
+
+
+<iframe  title="YouTube video player" width="480" height="390" src="//www.youtube.com/watch?v=MsVHI3s5QB4" frameborder="0" allowfullscreen></iframe>
