--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -2,10 +2,12 @@
 title: "Research"
 bg: orange
 color: black
-fa-icon: fa-lightbulb-o
+fa-icon: lightbulb-o
 ---
 
 2. Identifying Protein Conformational States
 
 
-<iframe  title="YouTube video player" width="480" height="390" src="//www.youtube.com/watch?v=MsVHI3s5QB4" frameborder="0" allowfullscreen></iframe>
+
+<iframe width="420" height="315" src= "https://youtu.be/MsVHI3s5QB4" frameborder="0" allowfullscreen></iframe>
+
