beta site up and running

--- a/_posts/2000-01-06-tips.md
+++ b/_posts/2000-01-06-tips.md
@@ -6,3 +6,17 @@ fa-icon: terminal
 ---
 
 ## My dev setup.
+
+
+
+
+
+
+
+
+
+
+
+Linux         | Editor                                                  |Github
+------------- | --------------------------------------------------------|-------
+![]({{ site.url }}img/ubuntu.ico)  | ![]({{ site.url }}img/emacs.ico)   |![]({{ site.url }}img/github_pack.ico)
