--- a/_posts/2000-01-06-tips.md
+++ b/_posts/2000-01-06-tips.md
@@ -7,16 +7,14 @@ fa-icon: terminal
 
 ## My dev setup.
 
+My Desktop, workstation, laptop, phone and router is powered by Linux. <br> 
+Editor: Emacs (ofcourse!) with [prelude][1] .<br>
+IDE : [Jetbrains][2] professional IDEs, [Clion][3] for C++ and [PyCharm][4] for python. 100s of $ worth software free for academics.<br>
+VCS : [Github][5]. If you are a student grab the expensive [Github pack][6] for free. <br>
 
-
-
-
-
-
-
-
-
-
-Linux         | Editor                                                  |Github
-------------- | --------------------------------------------------------|-------
-![]({{ site.url }}img/ubuntu.ico)  | ![]({{ site.url }}img/emacs.ico)   |![]({{ site.url }}img/github_pack.ico)
+[1]: http://batsov.com/prelude/
+[2]: https://www.jetbrains.com/
+[3]: https://www.jetbrains.com/clion/
+[4]: https://www.jetbrains.com/pycharm/?fromMenu
+[5]: https://github.com/
+[6]: https://education.github.com/pack
