--- a/_posts/2000-01-06-tips.md
+++ b/_posts/2000-01-06-tips.md
@@ -7,13 +7,13 @@ fa-icon: terminal
 
 ## My dev setup.
 
-My Desktop, workstation, laptop, phone and router is powered by Linux. <br> 
+My Desktop, workstation, laptop, phone and router are all powered by Linux. <br> 
 
-Editor: Emacs (ofcourse!) with [prelude][1] .<br>
+Editor: Emacs (of course!) with [prelude][1] .<br>
 
-IDE : [Jetbrains][2] professional IDEs, [Clion][3] for C++ and [PyCharm][4] for python. 100s of $ worth software free for academics.<br>
+IDE : [Jetbrains][2] professional IDEs, [Clion][3] for C++ and [PyCharm][4] for python. Free for academics.<br>
 
-VCS : [Github][5]. If you are a student grab the expensive [Github pack][6] for free. <br>
+VCS : [Github][5]. If you are a student, grab the expensive [Github pack][6] for free. <br>
 
 [1]: http://batsov.com/prelude/
 [2]: https://www.jetbrains.com/
