Asking for a job

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -10,7 +10,7 @@ style: center
 
 #About Kala Bharath Pilla
 
-**Status: Looking for a Postdoctoral position. 
+**Status: Looking for a Postdoctoral position.** 
 
 I am currently Postdoc at Australian National university with Prof.Thomas Huber.
 I finished my PhD in computational structural biology, my PhD thesis titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
