--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -8,7 +8,7 @@ style: center
 
 ![My helpful screenshot]({{ site.url }}img/DSCF1301.JPG) 
 
-#About Kala Bharath Pilla
+#About Kala Bharath Pilla (kalabharath@gmail.com)
 
 **Status: Looking for a Postdoctoral position.** 
 
