--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -11,9 +11,9 @@ style: center
 
 **Status: Looking for a Postdoctoral position.** 
 
-I am currently Postdoc at Australian National university with Prof.Thomas Huber.
-I finished my PhD in computational structural biology, my PhD thesis titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
-I write and develop new algorithms/software for protein structure determination from limited experimental data. Check out my publications and research for more information.
+I am currently working as a Postdoc at Australian National university with Prof.Thomas Huber.
+I finished my PhD in computational structural biology, my PhD thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
+I write and develop new algorithms/software for protein structure determination from sparse experimental data. Check out my publications and research for more information.
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
