New in press article

--- a/_posts/2000-01-06-tips.md
+++ b/_posts/2000-01-06-tips.md
@@ -1,23 +1,12 @@
 ---
-title: "Workspace"
+title: "Contact"
 bg: purple
 color: white
-fa-icon: terminal
+fa-icon: envelope
 ---
 
-## My dev setup.
+## Contact
 
-My Desktop, workstation, laptop, phone and router are all powered by Linux. <br> 
+Email: kalabharath gmail dt com
 
-Editor: Emacs (of course!) with [prelude][1] .<br>
-
-IDE : [Jetbrains][2] professional IDEs, [Clion][3] for C++ and [PyCharm][4] for python. Free for academics.<br>
-
-VCS : [Github][5]. If you are a student, grab the expensive [Github pack][6] for free. <br>
-
-[1]: http://batsov.com/prelude/
-[2]: https://www.jetbrains.com/
-[3]: https://www.jetbrains.com/clion/
-[4]: https://www.jetbrains.com/pycharm/?fromMenu
-[5]: https://github.com/
-[6]: https://education.github.com/pack
+Twitter: @kalabharath
