--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -10,6 +10,6 @@ style: center
 #About Kala Bharath Pilla 
 
 I am currently working as a Postdoc at Australian National university with Prof.Thomas Huber.
-I finished my PhD in computational structural biology, my PhD thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
+I finished my PhD in computational structural biology, my PhD thesis is titled "Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
 I write and develop new algorithms/software for protein structure determination from sparse experimental data. Check out my publications and research for more information.
 
