New graduation photo

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,7 +7,7 @@ style: center
 
 ![My helpful screenshot]({{ site.url }}img/S0101117.jpg) 
 
-# About Kala Bharath Pilla 
+# Kala Bharath Pilla 
 
 I am currently working as a Postdoc at Australian National university with Prof.Thomas Huber.
 I finished my PhD in computational structural biology, my PhD thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
