New research info

--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -5,6 +5,30 @@ color: black
 fa-icon: lightbulb-o
 ---
 
+# PCS-Driven Iterative Re-sampling method for 3D Structure Determinations of Large Proteins
+
+Incorporating sparse NMR restraints in structure prediction methods, such as Rosetta, can guide the sampling towards the global energy minimum. However, the approach is limiting with the increase in the size of the protein. 
+Here, we demonstrate a new computational algorithm which improves Rosetta’s fragment assembly method that utilizes long-range structural information encoded in Pseudocontact shifts (PCS) generated from site-specific attachment of paramagnetic lanthanide ions at four different sites.
+The algorithm relies solely on the sparse PCS datasets and utilizes them in multiple different means to determine the 3D structure of a protein. 
+Firstly, the algorithm directs the conformational search of the proteins towards the native state; secondly, it ranks best structural models from fitted PCS restraints; 
+thirdly, it identifies native like local structures and rebuilds the fragment libraries. Finally, the algorithm iterates the sampling using the PCS derived fragment libraries until convergence. 
+We show that our PCS driven iterative resampling algorithm is quite powerful in obtaining accurate models over a benchmark set of eight different proteins, ranging from 100 to 220 residues, using only backbone amide hydrogen PCSs. The iterative resampling algorithm is strictly data dependent and data driven 
+and poses a powerful alternative to not only traditional approaches but also the other existing resampling based methods for 3D structure determination.
+
+
+![iterative resampling]({{ site.url }}img/iterative_resampling.png) 
+
+Scatter plot of GPS-Rosetta sampled structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) 
+versus the Cα RMSD. The different iterations are color-coded, the zeroth iteration is shown in black, and the next ten iterations are from blue to red.
+(C) Improvement in quality of fragments identified by overlapping Δχ-tensors in PCS driven iterative scheme. For each nine-residue fragment, the RMSD is calculated between the fragment and its corresponding native fragment in the crystal structure.
+The quality of the standard fragment library used for zeroth iteration is shown in black and the PCS identified fragments in successive iterations are color-coded from blue to red.
+
+Scatter plot of GPS-Rosetta sampled structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) versus the Cα RMSD of the crystal structure [PDBID:1H68]. The different iterations are color-coded, the zeroth iteration is shown in black, and the next ten iterations are from blue to red as shown in the color bar. The same color-coding is used throughout the manuscript. (C) Improvement in quality of fragments identified by overlapping Δχ-tensors in PCS driven iterative scheme. For each nine-residue fragment, the RMSD is calculated between each nine-residue fragment and its corresponding native fragment in the crystal structure [PDBID: 1H68]. The quality of the standard fragment library used for zeroth iteration is shown in black and the PCS identified fragments in successive iterations are color-coded from blue to red.
+
+**7. Pseudocontact shift-driven iterative resampling for 3D structure determinations of large proteins.**<br>
+**KB Pilla**, G Otting, T Huber.<br>
+J. Mol. Biol. 428, 522-532 (2016) <i class="fa fa-file-pdf-o"></i> [pdf][6] Supp <i class="fa fa-file-pdf-o"></i> [pdf][7]
+
 # Capturing Conformational States
 
 Understanding induced conformational changes at an atomic level is critical for drug development. We identify these conformational states using sparse experimental data from paramagnetic NMR spectroscopy.
@@ -36,6 +60,8 @@ Structure 21 (6), 883-890 11 2013. <i class="fa fa-file-pdf-o"></i> [pdf][4]
 J Li, **KB Pilla**, Q Li, Z Zhang, X Su, T Huber, J Yang.<br>
 Journal of the American Chemical Society 135 (22), 8294-8303, 11 2013. <i class="fa fa-file-pdf-o"></i> [pdf][3]
 
+[7]: http://comp-bio.anu.edu.au/huber/papers/Kala_JMB2016_supp.pdf
+[6]: http://comp-bio.anu.edu.au/huber/papers/Kala_JMB2016.pdf
 [5]: http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0127053 "link"
 [4]: http://comp-bio.anu.edu.au/huber/papers/hiromasa_structure2013.pdf "pdf"
 [3]: http://comp-bio.anu.edu.au/huber/papers/kala_jacs2013.pdf
