New research info

--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -5,7 +5,7 @@ color: black
 fa-icon: lightbulb-o
 ---
 
-# PCS-Driven Iterative Re-sampling method for 3D Structure Determinations of Large Proteins
+# Iterative Re-sampling Technique for 3D Structure Determinations of Large Proteins
 
 Incorporating sparse NMR restraints in structure prediction methods, such as Rosetta, can guide the sampling towards the global energy minimum. However, the approach is limiting with the increase in the size of the protein. 
 Here, we demonstrate a new computational algorithm which improves Rosetta’s fragment assembly method that utilizes long-range structural information encoded in Pseudocontact shifts (PCS) generated from site-specific attachment of paramagnetic lanthanide ions at four different sites.
@@ -16,14 +16,13 @@ We show that our PCS driven iterative resampling algorithm is quite powerful in 
 and poses a powerful alternative to not only traditional approaches but also the other existing resampling based methods for 3D structure determination.
 
 
-![iterative resampling]({{ site.url }}img/iterative_resampling.png) 
+![iterative resampling]({{ site.url }}img/Iterative_resampling.png) 
 
 Scatter plot of GPS-Rosetta sampled structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) 
 versus the Cα RMSD. The different iterations are color-coded, the zeroth iteration is shown in black, and the next ten iterations are from blue to red.
 (C) Improvement in quality of fragments identified by overlapping Δχ-tensors in PCS driven iterative scheme. For each nine-residue fragment, the RMSD is calculated between the fragment and its corresponding native fragment in the crystal structure.
 The quality of the standard fragment library used for zeroth iteration is shown in black and the PCS identified fragments in successive iterations are color-coded from blue to red.
 
-Scatter plot of GPS-Rosetta sampled structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) versus the Cα RMSD of the crystal structure [PDBID:1H68]. The different iterations are color-coded, the zeroth iteration is shown in black, and the next ten iterations are from blue to red as shown in the color bar. The same color-coding is used throughout the manuscript. (C) Improvement in quality of fragments identified by overlapping Δχ-tensors in PCS driven iterative scheme. For each nine-residue fragment, the RMSD is calculated between each nine-residue fragment and its corresponding native fragment in the crystal structure [PDBID: 1H68]. The quality of the standard fragment library used for zeroth iteration is shown in black and the PCS identified fragments in successive iterations are color-coded from blue to red.
 
 **7. Pseudocontact shift-driven iterative resampling for 3D structure determinations of large proteins.**<br>
 **KB Pilla**, G Otting, T Huber.<br>
