--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -18,13 +18,13 @@ and poses a powerful alternative to not only traditional approaches but also the
 
 ![iterative resampling]({{ site.url }}img/Iterative_resampling.png) 
 
-Scatter plot of GPS-Rosetta sampled structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) 
+(A) Scatter plot of GPS-Rosetta sampled structures showing the combined Rosetta centroid energy and PCS energy and Rosetta all-atom energy and PCS energy in (B) 
 versus the Cα RMSD. The different iterations are color-coded, the zeroth iteration is shown in black, and the next ten iterations are from blue to red.
 (C) Improvement in quality of fragments identified by overlapping Δχ-tensors in PCS driven iterative scheme. For each nine-residue fragment, the RMSD is calculated between the fragment and its corresponding native fragment in the crystal structure.
 The quality of the standard fragment library used for zeroth iteration is shown in black and the PCS identified fragments in successive iterations are color-coded from blue to red.
 
 
-**7. Pseudocontact shift-driven iterative resampling for 3D structure determinations of large proteins.**<br>
+**Pseudocontact shift-driven iterative resampling for 3D structure determinations of large proteins.**<br>
 **KB Pilla**, G Otting, T Huber.<br>
 J. Mol. Biol. 428, 522-532 (2016) <i class="fa fa-file-pdf-o"></i> [pdf][6] Supp <i class="fa fa-file-pdf-o"></i> [pdf][7]
 
