--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,6 +9,7 @@ style: center
 
 # Kala Bharath Pilla 
 
-I am currently working as a Postdoc at Australian National university with Prof.Thomas Huber.
-I finished my PhD in computational structural biology, my PhD thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
+I am a Postdoc fellow at the University of Calgary, working  with Dr Justin MacCallum.
+I finished my PhD in computational structural biology under the supervision of Prof Thomas Huber at the Australian National University.
+My PhD thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
 I write and develop new algorithms/software for protein structure determination from sparse experimental data. Check out my publications and research for more information.
