--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 style: center
 ---
 
-![My helpful screenshot]({{ site.url }}img/S0101117.jpg) 
+![My helpful screenshot]({{ site.url }}img/DSCF3055.JPG) 
 
 # Kala Bharath Pilla 
 
