--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -16,7 +16,7 @@ We show that our PCS driven iterative resampling algorithm is quite powerful in 
 and poses a powerful alternative to not only traditional approaches but also the other existing resampling based methods for 3D structure determination.
 
 
-![iterative resampling] ({{ site.url }}img/Iterative_resampling.png) 
+![iterative resampling] ({{ site.url }}/img/Iterative_resampling.png) 
 
 Results of the iterative GPS-Rosetta on a 200 residue trans-membrane bacterial rhodopsin protein, pSRII,PDBID:1H68. Structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) 
 versus the Cα RMSD. (C) Improvement in quality of fragments identified by overlapping Δχ-tensors in PCS driven iterative scheme. For each nine-residue fragment, the RMSD is calculated between the fragment and its corresponding native fragment in the crystal structure.
@@ -33,7 +33,7 @@ Understanding induced conformational changes at an atomic level is critical for 
 We demonstrate this using our GPS-Rosetta approach on the example of the Dengue virus protease structure which can exist in two forms, a “closed” form in the presence of an inhibitor and an “open” form without inhibitor. 
 Our approach succeeds in the structural elucidation of both forms while the traditional computational method fails. 
 
-![conformational states]({{ site.url }}img/dvp_states.png) 
+![conformational states]({{ site.url }}/img/dvp_states.png) 
 
 **Capturing Conformational States in Proteins Using Sparse Paramagnetic NMR Data.**<br>
 **KB Pilla**, J Koehler Leman, G Otting, T Huber. <br>
