--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -16,8 +16,10 @@ We show that our PCS driven iterative resampling algorithm is quite powerful in 
 and poses a powerful alternative to not only traditional approaches but also the other existing resampling based methods for 3D structure determination.
 
 
-![iterative resampling]({{ site.url }}/img/Iterative_resampling.jpg) 
 
+![conformational states]({{ site.url }}/img/Iterative_resampling.jpg)
+ 
+ 
 Results of the iterative GPS-Rosetta on a 200 residue trans-membrane bacterial rhodopsin protein, pSRII,PDBID:1H68. Structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) 
 versus the Cα RMSD. (C) Improvement in quality of fragments identified by overlapping Δχ-tensors in PCS driven iterative scheme. For each nine-residue fragment, the RMSD is calculated between the fragment and its corresponding native fragment in the crystal structure.
 The quality of the standard fragment library used for zeroth iteration is shown in black and the PCS identified fragments in successive iterations are color-coded from blue to red.
