--- a/_posts/2000-01-03-Research.md
+++ b/_posts/2000-01-03-Research.md
@@ -17,7 +17,7 @@ and poses a powerful alternative to not only traditional approaches but also the
 
 
 
-![conformational states]({{ site.url }}/img/Iterative_resampling.jpg)
+![resampling]({{ site.url }}/img/Iterative_resampling.jpg)
  
  
 Results of the iterative GPS-Rosetta on a 200 residue trans-membrane bacterial rhodopsin protein, pSRII,PDBID:1H68. Structures showing the combined Rosetta centroid energy and PCS energy in (A) and Rosetta all-atom energy and PCS energy in (B) 
