--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,7 +9,10 @@ style: center
 
 # Kala Bharath Pilla 
 
-Currently I am a Postdoc fellow at the University of Calgary, working  with Dr Justin MacCallum.
-I finished my PhD in computational structural biology under the supervision of Prof Thomas Huber at the Australian National University. <br>
-My PhD thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
-I write and develop new algorithms/software for protein structure determination from sparse experimental data. Check out my publications and research for more information.
+Currently **Alberta Innovates Postdoc fellow** at University of Calgary.
+My PhD is specialized in computational structural biology under the supervision of Prof Thomas Huber at the Australian National University. <br>
+My thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
+I write and develop new algorithms and software for protein structure determination from sparse experimental data. 
+My notable contributions:
+**"DINGO-PCS"** : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs
+**"GPS-Rosetta"**" : Protein Structure determination inspired by GPS algorithms.
