--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,10 +9,10 @@ style: center
 
 # Kala Bharath Pilla 
 
-Currently **Alberta Innovates Postdoc fellow** at University of Calgary.
+Currently **Alberta Innovates Postdoc fellow** at University of Calgary.<br>
 My PhD is specialized in computational structural biology under the supervision of Prof Thomas Huber at the Australian National University. <br>
-My thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.
-I write and develop new algorithms and software for protein structure determination from sparse experimental data. 
-My notable contributions:
-**"DINGO-PCS"** : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs
-**"GPS-Rosetta"**" : Protein Structure determination inspired by GPS algorithms.
+My thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
+I write and develop new algorithms and software for protein structure determination from sparse experimental data.<br> 
+My notable contributions:<br>
+**"DINGO-PCS"** : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs<br>
+**"GPS-Rosetta"**" : Protein Structure determination inspired by GPS algorithms.<br>
