--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,6 +9,8 @@ style: center
 
 # Kala Bharath Pilla 
 
+style: left
+
 Currently **Alberta Innovates Postdoc fellow** at University of Calgary.<br>
 My PhD is specialized in computational structural biology under the supervision of Prof Thomas Huber at the Australian National University. <br>
 My thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
