--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -8,11 +8,14 @@ style: center
 ![My helpful screenshot]({{ site.url }}/img/DSCF3727.JPG) 
 
 # Kala Bharath Pilla 
+
 ---
 style: left
 ---
+
+
 Currently **Alberta Innovates Postdoc fellow** at University of Calgary.<br>
-My PhD is specialized in computational structural biology under the supervision of Prof Thomas Huber at the Australian National University. <br>
+My PhD was in computational structural biology under the supervision of **Prof Thomas Huber** at the **Australian National University.** <br>
 My thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
 I write and develop new algorithms and software for protein structure determination from sparse experimental data.<br> 
 My notable contributions:<br>
