--- a/_posts/2000-01-02-research.md
+++ b/_posts/2000-01-02-research.md
@@ -6,7 +6,7 @@ fa-icon: lightbulb-o
 ---
 
 # “DINGO-PCS” : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs
-![DINGO]({{ site.url }}/img/structure_GA.png =100x100)
+![DINGO]({{ site.url }}/img/structure_GA.png | width=500)
 
 Computational and NMR hybrid approaches have proven to be a rapid and reliable approach for 3D structure determination of small proteins, but the current state-of-the-art algorithms struggle to perform with larger proteins. In this work, we demonstrate a new computational algorithm that assembles the 3D structure of a protein from its constituent super-secondary structural motifs (Smotif) with the help of pseudocontact (PCS) restraints for backbone amide protons, where the PCSs are produced from different metal centers. The algorithm, DINGO-PCS (3D assembly of Individual Smotifs to Near-native Geometry as Orchestrated by PCSs), employs the PCSs to recognize, orient and assemble the constituent Smotifs of the target protein without using any other experimental measurements or computational force fields. Using a universal Smotif database that applies to any target protein, the DINGO-PCS algorithm is designed to exhaustively enumerate any given Smotif. We benchmarked the DINGO-PCS algorithm against a set of ten different protein targets ranging from 100-220 residues with different topologies. For nine out of these ten targets, the method was able to identify near native Smotifs.
 
