--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -11,7 +11,7 @@ color: black
 
 Currently **Alberta Innovates Postdoc fellow** at University of Calgary.<br>
 My PhD was in computational structural biology under the supervision of **Prof Thomas Huber** at the **Australian National University.** <br>
-My thesis is titled **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
+My thesis is **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
 I write and develop new algorithms and software for protein structure determination from sparse experimental data.<br> 
 
 My notable contributions:<br>
