--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,12 +9,11 @@ color: black
 # Kala Bharath Pilla 
 
 
-Currently **Alberta Innovates Postdoc fellow** at University of Calgary.<br>
+Currently **Alberta Innovates Postdoc fellow** at University of Calgary working with Dr. Justin MacCallum.<br>
 My PhD was in computational structural biology under the supervision of **Prof Thomas Huber** at the **Australian National University.** <br>
-My thesis is **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
-I write and develop new algorithms and software for protein structure determination from sparse experimental data.<br> 
+My thesis was on **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
+My research interest is in developing new algorithms for protein structure determination from sparse experimental data.<br> 
 
 My notable contributions:<br>
-
 **"DINGO-PCS"** : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs<br>
 **"GPS-Rosetta"** : Protein Structure determination inspired by GPS algorithms.<br>{: .right}
