--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,7 +9,7 @@ color: black
 # Kala Bharath Pilla 
 
 
-Currently **Alberta Innovates Postdoc fellow** at University of Calgary working with Dr. Justin MacCallum.<br>
+Currently **Alberta Innovates Postdoc fellow** at the University of Calgary working with Dr. Justin MacCallum.<br>
 My PhD was in computational structural biology under the supervision of **Prof Thomas Huber** at the **Australian National University.** <br>
 My thesis was on **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
 My research interest is in developing new algorithms for protein structure determination from sparse experimental data.<br> 
