--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -9,7 +9,7 @@ color: black
 # Kala Bharath Pilla 
 
 
-I will be joining Prof. Andrej Sali's lab at UCSF as a Postdoc in 2018.</br> 
+I will be joining **Prof. Andrej Sali's lab at UCSF** as a Postdoc in 2018.</br> 
 My PhD was in computational structural biology under the supervision of **Prof Thomas Huber** at the **Australian National University.** <br>
 My thesis was on **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
 My research interest is in developing new algorithms for protein structure determination from sparse experimental data.<br> 
