--- a/_posts/2000-01-02-research.md
+++ b/_posts/2000-01-02-research.md
@@ -12,7 +12,7 @@ Computational and NMR hybrid approaches have proven to be a rapid and reliable a
 
 **Protein Structure Determination by Assembling Super-Secondary Structure Motifs Using Pseudocontact Shifts** <br>
 **KB Pilla**, G Otting, T Huber.<br>
-**Structure** (2017) Accepted. <br> 
+**Structure** 25 (3), 559-568, 2017. <br> 
 **Github Download**:[https://github.com/kalabharath/DINGO-PCS][8] <br>
 
 <br>
