--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,7 +4,8 @@ bg: white
 color: black
 ---
 
-![My helpful screenshot]({{ site.url }}/img/DSCF4288.JPG) 
+![My Picture]({{ site.url }}/img/DSCF4288.JPG){:style="float: right;margin-right: 7px;margin-top: 7px;"}
+ 
 
 # Kala Bharath Pilla 
 
