--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,7 +4,7 @@ bg: white
 color: black
 ---
 
-![My Picture]({{ site.url }}/img/DSCF4288.JPG){:style="float: right;margin-right: 7px;margin-top: 7px;"}
+![My Picture]({{ site.url }}/img/DSCF4288.JPG){:style="float: left;margin-left: 7px;margin-top: 7px;"}
  
 
 # Kala Bharath Pilla 
@@ -16,4 +16,4 @@ My research interests is in developing new algorithms for protein structure dete
 
 My notable contributions:<br>
 **"DINGO-PCS"** : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs<br>
-**"GPS-Rosetta"** : Protein Structure determination inspired by GPS algorithms.<br>{: .right}
+**"GPS-Rosetta"** : Protein Structure determination inspired by GPS algorithms.<br>{: .left}
