--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,8 +4,9 @@ bg: white
 color: black
 ---
 
-![My Picture]({{ site.url }}/img/DSCF4288.JPG){:style="float: left;margin-left: 7px;margin-top: 7px;"}
- 
+![My Picture]({{ site.url }}/img/DSCF4288.JPG)k{:style="float: left;margin-left: 7px;margin-top: 7px;"}
+<img align="left" src="img/DSCF4288.JPG">
+
 
 # Kala Bharath Pilla 
 
