--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,7 +4,8 @@ bg: white
 color: black
 ---
 
-<img align="left" src="img/DSCF4288.JPG">
+![My Picture]({{ site.url }}/img/DSCF4288.JPG | width=500) 
+
 
 
 # Kala Bharath Pilla 
