--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,8 +4,7 @@ bg: white
 color: black
 ---
 
-![My Picture]({{ site.url }}/img/DSCF4288.JPG | width=500) 
-
+<img align="left" src="img/DSCF4288.JPG" width="50%">
 
 
 # Kala Bharath Pilla 
