--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,7 +4,7 @@ bg: white
 color: black
 ---
 
-<img style="float" align="left" src="img/DSCF4288.JPG" width="50%">
+<img style="float" align="left" src="img/DSCF4288.JPG" width="50%" margin="10px">
 
 
 # Kala Bharath Pilla 
