--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,7 +4,7 @@ bg: white
 color: black
 ---
 
-<img style="float" align="left" src="img/DSCF4288.JPG" width="50%" margin="20px">
+<kbd><img style="float" align="left" src="img/DSCF4288.JPG" width="50%" margin="20px"><\kbd>
 
 
 # Kala Bharath Pilla 
@@ -16,4 +16,4 @@ color: black
 
  My notable contributions:<br>
  **"DINGO-PCS"** : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs<br>
- **"GPS-Rosetta"** : Protein Structure determination inspired by GPS algorithms.<br>{: .left}
+ **"GPS-Rosetta"** : Protein Structure determination inspired by GPS algorithms.<br>
