--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -3,9 +3,10 @@ title: "home"
 bg: white
 color: black
 ---
-<kbd>
-<img style="float" align="left" src="img/DSCF4288.JPG" width="50%" margin="20px">
-<\kbd>
+
+
+<img style="float: right;margin-right: 7px;margin-top: 7px;" align="left" src="img/DSCF4288.JPG" width="50%" margin="20px">
+
 
 # Kala Bharath Pilla 
 
