--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 ---
 
 
-<img style="float: right;margin-right: 7px;margin-top: 7px;" align="left" src="img/DSCF4288.JPG" width="50%" margin="20px">
+<img style="float: left;margin-left: 15px;margin-top: 10px;" align="left" src="img/DSCF4288.JPG" width="50%" margin="20px">
 
 
 # Kala Bharath Pilla 
