--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 ---
 
 
-<img align="center" src="img/DSCF4288.JPG" width="70%" margin="20px">
+<img src="img/DSCF4288.JPG" width="70%">
 
 
 # Kala Bharath Pilla 
