Added Riker's image to main website

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 ---
 
 
-<img src="img/DSCF3055.JPG" width="1000%">
+<img src="img/DSCF8155.jpg" width="1000%">
 
 
 # Kala Bharath Pilla 
