--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -10,10 +10,10 @@ color: black
 
 # Kala Bharath Pilla 
 
- I am currently looking for a job in industry in UK. I recently finished my  Postdoctoral fellowship with  **Prof. Andrej Sali** at University of California in San Francisco. <br>
- My PhD was in computational structural biology under the supervision of **Prof. Thomas Huber** at the **Australian National University.** <br>
+ I am currently working as a Computational Biologist at InstaDeep in London, UK. My previous roles include a Postdoctoral fellowship with  **Prof. Andrej Sali** at University of California in San Francisco and 
+ a doctoral fellowship in computational structural biology under the supervision of **Prof. Thomas Huber** and **Prof. Gottfried Otting** at the **Australian National University** in Canberra <br>
  My thesis was on **"Protein Structure Determination by Paramagnetic NMR and Computational Hybrid Approach"**.<br>
- My research interests are in developing new algorithms for protein structure determination from sparse experimental data.<br> 
+ My research interests are in developing new algorithms for integrative/hybrid modeling of proteins and protein complexes and in protein structure prediction.<br> 
 
  My notable contributions:<br>
  **"DINGO-PCS"** : 3D assembly of Individual smotifs to Near-native Geometry as Orchestrated by PCSs<br>
